codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__fullscreen_scrollback_viewport_snapshot.snap
---
source: astral-tui/src/surface_tests.rs
expression: buffer_text(&buffer)
---

  ⎇ main  /workspace


  Worked for 1.0s


  › question 6: inspect the layered transcript


  Response 6 keeps enough content to make the transcript overflow. Astral

  Worked for 1.0s                                                              █
                                                                               █
                                                                               █
  › question 7: inspect the layered transcript                                 █

                                        ▼
  ╭──────────────────────────────────────────────────────────────────────────╮
  │ ❯                                                                        │
  ╰──────────────────────────────────────────── claude-sonnet-4 · workspace ─╯

  Shift+Tab:mode  │  Ctrl+.:shortcuts
