codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__fullscreen_selection_overlay.snap
---
source: astral-tui/src/surface_tests.rs
expression: "format!(\"{}\\n\\nselection mask:\\n{}\", buffer_text(&buffer),\nselection_mask(&buffer, theme.text_primary))"
---
 ⎇ main  /workspace

 › inspect this repo


 I’m tracing the relevant data flow.





 ◇ Working
 ╭────────────────────────────────────────────────────────────────────╮
 │ ❯                                                                  │
 ╰────────────────────────────────────── claude-sonnet-4 · workspace ─╯
 Shift+Tab:mode  │  Ctrl+.:shortcuts

selection mask:





 ^^^^^^^^^^
