codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__fullscreen_surface_keeps_committed_history_snapshot.snap
---
source: astral-tui/src/surface_tests.rs
expression: buffer_text(&buffer)
---
 ⎇ main  /workspace
 ❯ inspect this repo

 I’m tracing the relevant data flow.




 ╭────────────────────────────────────────────────────────────────────╮
 │ ❯                                                                  │
 ╰────────────────────────────────────── claude-sonnet-4 · anthropic ─╯
 Enter:send  │  PgUp/PgDn:scroll  │  Ctrl+O:copy
