codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__grok_layered_turn_139x35_snapshot.snap
---
source: astral-tui/src/surface_tests.rs
expression: buffer_text(&buffer)
---

  ⎇ main  /workspace


  › 你 是 谁                                                                                                                        10:13 PM


  ◆ Thought for 0.5s

  我 是  Astral， 一 个 面 向 软 件 工 程 的 交 互 式 助 手 。                                                                                     10:13 PM

  • 读 写 代 码
  • 运 行 命 令
  • 调 试 和 重 构
  Worked for 2.4s














  ╭─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
  │ ❯                                                                                                                                   │
  ╰─────────────────────────────────────────────────────────────────────────────────────────────────────── claude-sonnet-4 · workspace ─╯

  Shift+Tab:mode  │  Ctrl+.:shortcuts
