codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__grok_view_120x32_snapshot.snap
---
source: astral-tui/src/surface_tests.rs
expression: "render_at_size(&mut state, &session, 120, 32)"
---

  ⎇ main  /workspace


  › inspect this repo


  I’m tracing the relevant data flow.
















  ◇ Working

  ╭──────────────────────────────────────────────────────────────────────────────────────────────── Astral session ──╮
  │ ❯ trace the projection                                                                                           │
  ╰──────────────────────────────────────────────────────────────────────────────────── claude-sonnet-4 · workspace ─╯

  Enter:queue  │  Shift+Tab:mode  │  Ctrl+.:shortcuts
