codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__interleaved_live_events_render_each_turn_once.snap
---
source: astral-tui/src/surface_tests.rs
expression: rendered
---
 ⎇ main  /workspace

 › first question


 first response


 › second question







 ╭────────────────────────────────────────────────────────────────────────────╮
 │ ❯                                                                          │
 ╰────────────────────────────────────────────── claude-sonnet-4 · workspace ─╯
 Shift+Tab:mode  │  Ctrl+.:shortcuts
