codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__mcp_form_elicitation_surface.snap
---
source: astral-tui/src/surface_tests.rs
expression: "request_surface(json!({\n    \"method\": \"mcpServer/elicitation/request\", \"id\": \"mcp-form\", \"params\":\n    {\n        \"threadId\": \"thread-1\", \"turnId\": \"turn-1\", \"serverName\": \"astral\",\n        \"mode\": \"form\", \"_meta\": null, \"message\": \"Choose settings\",\n        \"requestedSchema\":\n        {\n            \"type\": \"object\", \"properties\":\n            {\n                \"confirmed\":\n                {\n                    \"type\": \"boolean\", \"title\": \"Confirm changes\",\n                    \"description\":\n                    \"Allow the MCP server to apply these settings\"\n                }\n            }, \"required\": [\"confirmed\"]\n        }\n    }\n}), \"keep this prompt draft\")"
---
 ⎇ main  /workspace

 › inspect this repo                                           12:00 AM


 I’m tracing the relevant data flow.



 ┃
 ┃  astral needs input
 ┃  Choose settings
 ┃
 ┃  Confirm changes · yes/no · required · 1/1
 ┃  Allow the MCP server to apply these settings
 ┃  › Yes
 ┃  ○ No
 Space:choose  │  Enter:next  │  Ctrl+D:decline  │  Esc:cancel
