codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__mcp_url_elicitation_surface.snap
---
source: astral-tui/src/surface_tests.rs
expression: "request_surface(json!({\n    \"method\": \"mcpServer/elicitation/request\", \"id\": \"mcp-url\", \"params\":\n    {\n        \"threadId\": \"thread-1\", \"turnId\": \"turn-1\", \"serverName\": \"linear\",\n        \"mode\": \"url\", \"_meta\": null, \"message\": \"Connect Linear to continue\",\n        \"url\": \"https://linear.app/oauth/authorize\", \"elicitationId\": \"auth-1\"\n    }\n}), \"\")"
---
 ⎇ main  /workspace

 › inspect this repo                                           12:00 AM


 I’m tracing the relevant data flow.




 ┃
 ┃  Authorize linear in the browser?
 ┃  Connect Linear to continue
 ┃  https://linear.app/oauth/authorize
 ┃
 ┃  y (○) Open and continue
 ┃  n (○) Decline
 Y:accept  │  N:decline  │  Esc:cancel
